# charm-fitter

./: .clang-format  .gitignore  .pre-commit-config.yaml  .ruff.toml  CITATION.bib  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  README.md  make-plots.py  ruff.toml  setup-env-cvmfs.sh
blue/: DY.cpp  d-to-etah.py  d0-to-ksks.py  dy.py  ksks.cpp  utils.py
charmcombo/: CMakeLists.txt  make-plots.py  make_plots.py  nico.sh
charmcombo/averages/: DY.cpp  d-to-etah.py  d0-to-ksks.py  dy.py  ksks.cpp  utils.py
charmcombo/blue/: DY.cpp
charmcombo/dy-average/: DY.cpp  lhcb.mplstyle  plot-dy-average.py
charmcombo/include/: CharmUtils.h  PDF_AcpHH_LHCb_Run12.h  PDF_AcpHH_Nico.h  PDF_BES.h  PDF_BES_CLEO_K3pi_Kpipi0.h  PDF_BES_Kpi.h  PDF_BES_Kpi_1d.h  PDF_BinFlip.h  PDF_Cleo.h  PDF_DY.h  PDF_DY_RS.h  PDF_DY_f.h  PDF_DY_pipipi0.h  PDF_Fp_pipipi0.h  PDF_K3pi.h  PDF_Kpipi0.h  PDF_Kshh.h  PDF_RM.h  PDF_WS.h  PDF_WS_NoCPV.h  PDF_XY.h  PDF_scan_DY_RS.h  PDF_yCP.h  PDF_yCP_minus_yCP_KP.h  PDF_yCP_minus_yCP_RS.h  PDF_yCP_plus_yCP_RS.h  ParametersCharmCombo.h  combiner.h
charmcombo/main/: charmcombo.cpp  charmcombo_phenomenological.cpp  charmcombo_superweak.cpp  charmcombo_theoretical.cpp  ws-combo.cpp
charmcombo/src/: CharmUtils.cpp  PDF_AcpHH_LHCb_Run12.cpp  PDF_AcpHH_Nico.cpp  PDF_BES.cpp  PDF_BES_CLEO_K3pi_Kpipi0.cpp  PDF_BES_Kpi.cpp  PDF_BES_Kpi_1d.cpp  PDF_BinFlip.cpp  PDF_Cleo.cpp  PDF_DY.cpp  PDF_DY_RS.cpp  PDF_DY_pipipi0.cpp  PDF_Fp_pipipi0.cpp  PDF_K3pi.cpp  PDF_Kpipi0.cpp  PDF_Kshh.cpp  PDF_RM.cpp  PDF_WS.cpp  PDF_WS_NoCPV.cpp  PDF_XY.cpp  PDF_scan_DY_RS.cpp  PDF_yCP.cpp  PDF_yCP_minus_yCP_KP.cpp  PDF_yCP_minus_yCP_RS.cpp  PDF_yCP_plus_yCP_RS.cpp  ParametersCharmCombo.cpp  combiner.cpp
cmake/: combiners.cmake  settings.cmake
config/: 2025.py  classes.py
core/include/: GammaComboEngine.h  Utils.h  coreLinkDef.h  rdtsc.h
core/src/: GammaComboEngine.cpp  RooBinned2DBicubicBase.cpp  Utils.cpp
doc/: Doxyfile.in
include/: CharmUtils.h  PDF_BES_CLEO_K3pi_Kpipi0.h  PDF_BES_Kpi.h  PDF_BES_Kpi_1d.h  PDF_BES_Kpi_7d.h  PDF_DY.h  PDF_DY_RS.h  PDF_Kpipi0.h  PDF_Kshh.h  PDF_yCP_plus_yCP_RS.h  ParametersCharmCombo.h
main/: charmcombo.cpp  ws-combo.cpp
scripts/: lhcb.mplstyle  mpl-plots.py  u-spin.py  utils.py
src/: PDF_AcpHH_LHCb_Run12.cpp  PDF_BES_CLEO_K3pi_Kpipi0.cpp  PDF_BES_Kpi.cpp  PDF_BES_Kpi_1d.cpp  PDF_BES_Kpi_7d.cpp  PDF_BinFlip.cpp  PDF_Cleo.cpp  PDF_DY.cpp  PDF_DY_RS.cpp  PDF_DY_pipipi0.cpp  PDF_Fp_pipipi0.cpp  PDF_K3pi.cpp  PDF_Kpipi0.cpp  PDF_Kshh.cpp  PDF_RM.cpp  PDF_WS.cpp  PDF_WS_NoCPV.cpp  PDF_XY.cpp  PDF_scan_DY_RS.cpp  PDF_yCP.cpp  PDF_yCP_minus_yCP_KP.cpp  PDF_yCP_minus_yCP_RS.cpp  PDF_yCP_plus_yCP_RS.cpp  ParametersCharmCombo.cpp
